--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cffi==1.14.3
 click==7.1.2
 cryptography==3.1.1
 Flask==1.1.2
+Flask-HTTPAuth==4.1.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
